# llm-helpers

./: .env.example  .gitignore  README.md  publish-version.sh  pyproject.toml
src/llm_helpers/: __init__.py  const.py  file_utils.py  get_llm.py  parse_model_string.py
tests/: __init__.py  test_client.py  test_file_utils.py  test_parse_model_string.py
